KPilot Developer's notes for the beginning of april 2002
========================================================

2002-04-09  Adriaan de Groot
* Did some minor debugging in setting flags for the conduits.

2002-04-07  Adriaan de Groot
* There are now two real branches of development for KPilot. KDE_3_0_BRANCH
  gets bugfixes to the existing code, while HEAD gets new features. I imagine
  I'll merge BRANCH back to HEAD sometime when I feel that the main bugs
  are out (like next week, I hope). I'll be showing where patches go until
  we merge again.
* Added a message (no i18n) showing KPilot and pilot-link versions.
* Still need a workaround for dlp_addSyncLogEntry() for pilot-link 0.10.1
  [BRANCH - should go in HEAD as well]
* Fixed Makefile.am bug in popmailconduit. [BRANCH]
- --test mode wasn't working with kpilotTest (when running conduits) [BRANCH]

2002-04-06  Adriaan de Groot
* Applied patch to avoid crash with undefined symbol. I forget who sent
  it in, though. Thanks to you, anonymous! Wrote a script to catch this 
  kind of situation in the future.



KPilot Developer's notes for sometime in march 2002
===================================================

2002-03-09  Adriaan de Groot
* Sanitized syncStack so that nextAction isn't so ambiguous.
* Fixed missing default (--list) in kpilotTest.
* Some neatness fixes in pilotDaemon.cc and pilotDaemonDCOP.h.
* Test syncs shouldn't run conduits or install files. Fixed in pilotDaemon.
* The daemon leaked 2 FD's on every sync, which is bad. Added some extra
  ::close() calls, which fixes this (under p-l 0.9.5 and 0.10.1).
* Mucked about with USB devices some more, but it looks like the m500
  is going to be unusable under FBSD for some time. This isn't bad, since
  I can then concentrate on getting things working with the serial PalmV.
* It might be a good idea to start using the daemon to do just device tests
  instead of kpilotTest -- though it doens't make a big difference.

2002-03-08  Adriaan de Groot