@@ -12,8 +12,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>495</width>
-            <height>243</height>
+            <width>622</width>
+            <height>293</height>
         </rect>
     </property>
     <property stdset="1">
@@ -54,10 +54,92 @@
                         <name>spacing</name>
                         <number>6</number>
                     </property>
+                    <widget row="0"  column="0"  rowspan="1"  colspan="3" >
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>fFirstTimeSync</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>&amp;First Time syncing</string>
+                        </property>
+                        <property>
+                            <name>whatsThis</name>
+                            <string>&lt;qt&gt;Should be checked if your PDA has never been synced or backed up before.&lt;/qt&gt;</string>
+                        </property>
+                    </widget>
+                    <spacer row="5"  column="1" >
+                        <property>
+                            <name>name</name>
+                            <cstring>Spacer1</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>orientation</name>
+                            <enum>Vertical</enum>
+                        </property>
+                        <property stdset="1">
+                            <name>sizeType</name>
+                            <enum>Expanding</enum>
+                        </property>
+                        <property>
+                            <name>sizeHint</name>
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget row="2"  column="0"  rowspan="1"  colspan="3" >
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>fSmartMerge</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>&amp;Smartly merge new address by name or company</string>
+                        </property>
+                        <property stdset="1">
+                            <name>checked</name>
+                            <bool>true</bool>
+                        </property>
+                        <property>
+                            <name>whatsThis</name>
+                            <string>&lt;qt&gt;Use key fields to merge address books.&lt;/qt&gt;</string>
+                        </property>
+                    </widget>
+                    <widget row="1"  column="0"  rowspan="1"  colspan="3" >
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>fCloseKab</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>&amp;Close KAddressBook application if not already running</string>
+                        </property>
+                        <property>
+                            <name>whatsThis</name>
+                            <string>&lt;qt&gt;Close Kaddressbook if the conduit had to start it at the beginning of the Sync.&lt;/qt&gt;</string>
+                        </property>
+                    </widget>
                     <widget row="3"  column="0" >
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>fFormatName</cstring>
+                        </property>
+                        <property stdset="1">
+                            <name>text</name>
+                            <string>Show name as Last, First?</string>
+                        </property>
+                    </widget>
+                    <widget row="4"  column="0"  rowspan="1"  colspan="2" >
                         <class>QLabel</class>
                         <property stdset="1">
                             <name>name</name>
+
                             <cstring>TextLabel1</cstring>
                         </property>
                         <property stdset="1">
@@ -65,7 +147,7 @@
                             <string>Handle conflict in addresses:</string>
                         </property>
                     </widget>
-                    <widget row="3"  column="1" >
+                    <widget row="4"  column="2" >
                         <class>QComboBox</class>
                         <item>
                             <property>
@@ -106,76 +188,6 @@
                             <string>&lt;qt&gt;If you select &amp;quot;User Choose&amp;quot; here, the conduit will ask you what to do with every conflicting entry individually. Otherwise, it will apply your choice to every conflict.&lt;/qt&gt;</string>
                         </property>
                     </widget>
-                    <widget row="2"  column="0"  rowspan="1"  colspan="2" >
-                        <class>QCheckBox</class>
-                        <property stdset="1">
-                            <name>name</name>
-                            <cstring>fSmartMerge</cstring>
-                        </property>
-                        <property stdset="1">
-                            <name>text</name>
-                            <string>&amp;Smartly merge new address by name or company</string>
-                        </property>
-                        <property stdset="1">
-                            <name>checked</name>
-                            <bool>true</bool>
-                        </property>
-                        <property>
-                            <name>whatsThis</name>
-                            <string>&lt;qt&gt;Use key fields to merge address books.&lt;/qt&gt;</string>
-                        </property>
-                    </widget>
-                    <widget row="0"  column="0" >
-                        <class>QCheckBox</class>
-                        <property stdset="1">
-                            <name>name</name>
-                            <cstring>fFirstTimeSync</cstring>
-                        </property>
-                        <property stdset="1">
-                            <name>text</name>
-                            <string>&amp;First Time syncing</string>
-                        </property>
-                        <property>
-                            <name>whatsThis</name>
-                            <string>&lt;qt&gt;Should be checked if your PDA has never been synced or backed up before.&lt;/qt&gt;</string>
-                        </property>
-                    </widget>
-                    <widget row="1"  column="0"  rowspan="1"  colspan="2" >
-                        <class>QCheckBox</class>
-                        <property stdset="1">
-                            <name>name</name>
-                            <cstring>fCloseKab</cstring>
-                        </property>
-                        <property stdset="1">
-                            <name>text</name>
-                            <string>&amp;Close KAddressBook application if not already running</string>
-                        </property>
-                        <property>
-                            <name>whatsThis</name>
-                            <string>&lt;qt&gt;Close Kaddressbook if the conduit had to start it at the beginning of the Sync.&lt;/qt&gt;</string>
-                        </property>
-                    </widget>
-                    <spacer row="4"  column="0" >
-                        <property>
-                            <name>name</name>
-                            <cstring>Spacer1</cstring>
-                        </property>
-                        <property stdset="1">
-                            <name>orientation</name>
-                            <enum>Vertical</enum>
-                        </property>
-                        <property stdset="1">
-                            <name>sizeType</name>
-                            <enum>Expanding</enum>
-                        </property>
-                        <property>
-                            <name>sizeHint</name>
-                            <size>
-                                <width>20</width>
-                                <height>20</height>
-                            </size>
-                        </property>
-                    </spacer>
                 </grid>
             </widget>
             <widget>
