@@ -3,7 +3,8 @@
 ### so it seems logical to put them in one place.
 ###
 
-INCLUDES= -I$(top_srcdir)/kpilot/lib -I$(top_srcdir)/libkcal $(all_includes)
+INCLUDES= $(PISOCK_INCLUDE) \
+	-I$(top_srcdir)/kpilot/lib -I$(top_srcdir)/libkcal $(all_includes)
 
 METASOURCES = AUTO
 
