@@ -28,7 +28,11 @@ kpilot_save_ldflags="$LDFLAGS"
 CPPFLAGS="$CPPFLAGS $all_includes"
 LDFLAGS="$LDFLAGS $all_libraries"
 
+PISOCK_LIB=""
+PISOCK_INCLUDE=""
+
 AC_CHECK_HEADER(pi-file.h,[HAVE_PISOCK=1], )
+
 
 
 dnl Warn if no headers found. Maybe this should be collected at the end
@@ -37,30 +41,43 @@ dnl
 dnl If we do have the headers, try to link against the library. On some
 dnl platforms, notably Solaris, this requires some extra linkage against
 dnl -lsocket -lxnet. That leads us to some deeply nested AC_CHECK_LIB
-dnl calls, and NOTE the yuckiness when assigning values to LIBPISOCK.
+dnl calls, and NOTE the yuckiness when assigning values to PISOCK_LIB.
 dnl
 if  test "$HAVE_PISOCK" = "0" ; then
-	AC_MSG_WARN([KPILOT: no pilot-link headers found.])
-else
+	AC_MSG_CHECKING([for pi-file.h alternate])
+	for i in /usr/local/pilot/include /usr/local/include /vol/kde/support/include ; do
+		test -f $i/pi-file.h && HAVE_PISOCK=1
+		test -f $i/pi-file.h && PISOCK_INCLUDE="-I$i"
+	done
+
+
+	if test "$HAVE_PISOCK" = "0" ; then
+		AC_MSG_WARN([KPILOT: no pilot-link headers found.])
+	else
+		AC_MSG_RESULT([found])
+	fi
+fi
+
+if test "$HAVE_PISOCK" = "1" ; then
 	HAVE_PISOCK=0
 
 	AC_CHECK_LIB(pisock,
 		pi_accept,
-		[LIBPISOCK="-lpisock"
+		[PISOCK_LIB="-lpisock"
 		HAVE_PISOCK=1
 		],
 		[
 		unset ac_cv_lib_pisock_pi_accept
 		AC_CHECK_LIB(pisock,
 			pi_accept,
-			[LIBPISOCK="-lpisock -lsocket"
+			[PISOCK_LIB="-lpisock -lsocket"
 			HAVE_PISOCK=1
 			],
 			[
 			unset ac_cv_lib_pisock_pi_accept
 			AC_CHECK_LIB(pisock,
 				pi_accept,
-				[LIBPISOCK="-lpisock -lsocket -lxnet"
+				[PISOCK_LIB="-lpisock -lsocket -lxnet"
 				HAVE_PISOCK=1
 				],
 				[],
@@ -73,13 +90,31 @@ else
 		)
 fi
 
+dnl Run through the loop *anyway*, even if we've already found
+dnl the library. The inner if makes sure that we only check until
+dnl we've found the library once.
+dnl
+dnl
+for i in /usr/local/pilot/lib /usr/local/lib /vol/kde/support/lib ; do
+	if test "$HAVE_PISOCK" = "0" ; then
+		CPPFLAGS="$kpilot_save_cflags  $all_includes -I$i"
+		LDFLAGS="$kpilot_save_ldflags  $all_libraries -L$i -R$i"
+
+		unset ac_cv_lib_pisock_pi_accept
+		AC_CHECK_LIB(pisock,pi_accept,
+			[PISOCK_LIB="-L$i -R$i -lpisock"
+			HAVE_PISOCK=1],[],)
+	fi
+done
+
 if test "$HAVE_PISOCK" = "0" ; then
 	AC_MSG_WARN([KPILOT: pisock library not found])
 	DO_NOT_COMPILE="$DO_NOT_COMPILE kpilot"
 else
-	AC_MSG_RESULT([found])
-	AC_SUBST(LIBPISOCK)
+	AC_SUBST(PISOCK_LIB)
+	AC_SUBST(PISOCK_INCLUDE)
 fi
+
 
 CPPFLAGS="$kpilot_save_cflags"
 LDFLAGS="$kpilot_save_ldflags"
